--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,8 @@
 version: 0.1
 phases:
   install:
+    runtime-versions:
+      golang: 1.12
     commands:
       - apt-get update
       - apt-get install hugo -y
